# solacegrove-mcp-server

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  server.py
server/: __init__.py  __main__.py  pyproject.toml  server.py
src/browser_use_mcp_server/: __init__.py  cli.py  server.py
